--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.8",
+    "@radix-ui/react-popover": "1.0.3",
+    "@radix-ui/react-scroll-area": "^1.0.2",
     "axios": "^1.2.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
     "react-toastify": "^9.1.1",
     "sort-by": "^1.2.0"
