--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.8",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-dropdown-menu": "^2.0.2",
+    "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-popover": "1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.2",
+    "@stitches/react": "^1.2.8",
     "axios": "^1.2.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.8.0",
+    "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
     "sort-by": "^1.2.0"
   },
