--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-popover": "1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.1",
     "@stitches/react": "^1.2.8",
     "axios": "^1.2.5",
     "localforage": "^1.10.0",
