--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "react-router-dom": "^6.8.0",
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^0.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
+    "cypress": "^4.2.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
